# voice_call

./: IoT_README.md  README.md  abnormal_detector.py  intent_manager.py  question_manager.py  relay_client.py  senior_previous.py  senior_previous_1.py  senior_service.py  senior_service_best_previous.py  senior_voice_call_service.py  senior_voice_call_service_latest.py  senior_voice_call_service_previous.py  senior_voice_service.sh
Chat/: chat.py  chat_korean.py
Fetch/: fetch.py
Query/: .~lock.query_relay.xlsx#  query_relay.xlsx
listen/: listen.py
logs/: condition_log.txt
mom-i/: CMakeLists.txt  app_run.cpp  app_run.h  compat_stime.c  homey_service.cpp  homey_service.h  homey_test.cpp  main.cpp  main_homey.cpp  media_server.cpp  media_server.h  sk_aplay.cpp  sk_arecord.cpp  sk_humid_temp.cpp  sk_live.cpp  sk_live_basic.cpp  sk_main.cpp  sk_mic.cpp  sk_radar.cpp  sk_thermal.cpp  sys_conf.h
speak/: speak.py
